@@ -2,6 +2,7 @@
 	* FIX fixed bug #3816: The files wizard_form.dat and wizard_form.html is not saved
 	* FIX fixed bug #3715: Enable versioning: ext_tables.sql incompletely?
 	* ADD addded missing eval method "md5" for TCA generation (bug #3792), thanks to Jan-Hendrik 
+	* FIX fixed bug #3743: created tca.php: add field "t3ver_label" if versioning enabled
 
 2006-07-02 Ingo Renner <typo3@ingo-renner.com>
 	* ADD new feature: kickstarter can now create TS files in the static folder of an extension
